--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SplashFragment"
-    android:background="@color/green_leaf">
+    android:background="@color/green_leaf"
+    tools:context=".ui.SplashFragment">
 
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sistema Agro"
-        android:textColor="@color/white"
         android:layout_gravity="center"
-        android:textSize="48sp"/>
+        android:text="@string/app_title"
+        android:textColor="@color/white"
+        android:textSize="48sp" />
 
 </FrameLayout>
