--- a/app/src/main/res/layout/item_entry_property.xml
+++ b/app/src/main/res/layout/item_entry_property.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shape_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:layout_marginBottom="4dp"
-    android:background="@drawable/text_view_border"
-    >
+    android:background="@drawable/text_view_border">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/entry_property"
@@ -21,11 +19,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/text_show_descripion"
+            android:id="@+id/text_show_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Nome:"
+            android:text="@string/item_entry_property_text_description"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +34,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text=""
-            app:layout_constraintStart_toEndOf="@+id/text_show_descripion"
+            app:layout_constraintStart_toEndOf="@+id/text_show_description"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -44,10 +42,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Dimensão:"
+            android:text="@string/item_entry_property_text_dimension"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_show_descripion" />
+            app:layout_constraintTop_toBottomOf="@+id/text_show_description" />
 
         <TextView
             android:id="@+id/text_dimension"
@@ -63,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Localização:"
+            android:text="@string/item_entry_property_text_location"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_show_dimension" />
@@ -92,6 +90,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@color/gray"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_edit"
             android:textAllCaps="false"
             android:visibility="visible"
@@ -105,6 +104,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@color/gray"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_arrow_proceed"
             android:textAllCaps="false"
             android:visibility="visible"
