--- a/app/src/main/res/layout/item_entry_vintage.xml
+++ b/app/src/main/res/layout/item_entry_vintage.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shape_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:layout_marginBottom="4dp"
-    android:background="@drawable/text_view_border"
-    >
+    android:background="@drawable/text_view_border">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/entry_vintage"
@@ -22,11 +20,11 @@
 
 
         <TextView
-            android:id="@+id/text_show_descripion"
+            android:id="@+id/text_show_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Descrição:"
+            android:text="@string/item_entry_vintage_text_description"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +35,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text=""
-            app:layout_constraintStart_toEndOf="@+id/text_show_descripion"
+            app:layout_constraintStart_toEndOf="@+id/text_show_description"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -45,10 +43,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Inicio:"
+            android:text="@string/item_entry_vintage_text_begin"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_show_descripion" />
+            app:layout_constraintTop_toBottomOf="@+id/text_show_description" />
 
         <TextView
             android:id="@+id/text_begin"
@@ -64,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Término:"
+            android:text="@string/item_entry_vintage_text_end"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_show_begin" />
@@ -93,6 +91,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@color/gray"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_edit"
             android:textAllCaps="false"
             android:visibility="visible"
@@ -106,6 +105,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@color/gray"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_arrow_proceed"
             android:textAllCaps="false"
             android:visibility="visible"
