--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    tools:context=".ui.auth.RegisterFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ui.auth.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Cadastro"
+            android:text="@string/fragment_register_text_sign_in"
             android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -32,7 +32,7 @@
             android:id="@+id/text_first_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Primeiro nome"
+            android:text="@string/fragment_register_text_first_name"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/edit_first_name"
@@ -45,7 +45,7 @@
             android:layout_marginTop="95dp"
             android:autofillHints=""
             android:background="@color/white"
-            android:hint="Digite seu primeiro nome"
+            android:hint="@string/fragment_register_edit_first_name_hint"
             android:inputType="text"
             android:minHeight="48dp"
             android:padding="8dp"
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Sobrenome"
+            android:text="@string/fragment_register_text_last_name"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/edit_last_name"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:background="@color/white"
-            android:hint="Digite seu sobrenome"
+            android:hint="@string/fragment_register_edit_last_name_hint"
             android:inputType="text"
             android:minHeight="48dp"
             android:padding="8dp"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Email"
+            android:text="@string/fragment_register_text_email"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/edit_email"
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:background="@color/white"
-            android:hint="Digite seu Email"
+            android:hint="@string/fragment_register_edit_email_hint"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             android:padding="8dp"
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Senha"
+            android:text="@string/fragment_register_text_password"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/edit_password"
@@ -130,7 +130,7 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:background="@color/white"
-            android:hint="Digite sua senha"
+            android:hint="@string/fragment_register_edit_password_hint"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:padding="8dp"
@@ -145,7 +145,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Repita sua senha"
+            android:text="@string/fragment_register_text_repeat_password"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/edit_repeat_password"
@@ -158,7 +158,7 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:background="@color/white"
-            android:hint="Digite novamente sua senha"
+            android:hint="@string/fragment_register_edit_repeat_password_hint"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:padding="8dp"
@@ -174,7 +174,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:paddingBottom="4dp"
-            android:text="Tipo de acesso"
+            android:text="@string/fragment_register_text_confirmation"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/spinner_access_type"
@@ -195,8 +195,8 @@
             android:id="@+id/constraint_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_margin="20dp"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
@@ -209,7 +209,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
-                android:text="Cadastrar"
+                android:text="@string/fragment_register_button_sign_in"
                 android:textColor="@color/green_leaf"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -223,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
-                android:text="Voltar"
+                android:text="@string/fragment_register_button_back"
                 android:textColor="@color/green_leaf"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
