--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -10,7 +10,7 @@
         android:id="@+id/id_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="Hello" />
 
 </FrameLayout>
