--- a/app/src/main/res/layout/fragment_vintage_manager.xml
+++ b/app/src/main/res/layout/fragment_vintage_manager.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -40,7 +39,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Sistema Agro"
+                        android:text="@string/app_title"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -51,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:background="@color/green_leaf"
+                    android:importantForAccessibility="no"
                     android:paddingHorizontal="8dp"
                     android:src="@drawable/ic_logout"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -63,6 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:background="@color/green_leaf"
+                    android:importantForAccessibility="no"
                     android:paddingHorizontal="8dp"
                     android:src="@drawable/ic_arrow_back"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="Safras"
+            android:text="@string/Fragment_vintage_manager_text_vintage"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
